# graph-rule-runner

./: .env  docker-compose.yml  pyproject.toml
app/: main.py
app/src/: config.py  database.py  dependencies.py
app/src/domain/rules/: models.py  repository.py  schemas.py  service.py
app/src/routers/: api.py  rule.py
